--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 pymongo>=3.9.0,<4.0.0
 requests==2.22.0
-sh
+sh==1.12.14
 numpy==1.17.3
+opencv-contrib-python==4.2.0.32
+Pillow==7.0.0
+matplotlib==3.2.1
+torch==1.4.0
+torchvision=0.5.0
